# tcode-api

./: .buildinfo  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/concepts/: execution_cycle.doctree  index.doctree
.doctrees/tutorials/: connect_to_fleet.doctree  index.doctree
.github/workflows/: docs.yaml
_sources/: index.rst.txt
_sources/concepts/: index.rst.txt
_sources/tutorials/: connect_to_fleet.rst.txt  index.rst.txt
concepts/: execution_cycle.html  index.html
data/: 1000ulBiotixTipBoxPart63300060.json  20ulBiotixTipBoxPart63300042.json  2ml-Sarstedt-72.894.308-tube-rack.json  300ulBiotixTipBoxPart63300059.json  50ml-SergiLabs-Tube-Rack-With-50ml-FroggyBio-Tubes.json  COSTAR_ME.json  CheckIt.json  Corning-Costar-96-well-plate-3688.json  Corning-Costar-96-well-plate-3788.json  PetriDish.json  Trash-Bin.json  deep-well-384.json  media-reservoir-D3390-04S.json
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/api/: commands.rst  common.rst  entity.rst  index.rst  integrator.rst  labware.rst  labware_holder.rst  locations.rst  pipette_tip_layout.rst  script.rst  servicer.rst
docs/source/concepts/: entity.rst  entity_resolution.rst  execution_cycle.rst  index.rst
docs/source/getting_started/: index.rst  setup-environment.rst  setup-ide.rst
docs/source/tutorials/: connect_to_fleet.rst  index.rst
labware/: 3d_printed_trash_can.json  biotix_utip_p200_tip.json  biotix_utip_p20_box.json  biotix_utip_p250_box.json  biotix_utip_p250_tip.json  checkit_50ul.json  costar_3603_plate.json  opentrons_p300_tip.json  thermo_nunc_266120_lid.json
scripts/: basic_arm_move.py  basic_fluid_move.py  calibrate_deck_slot.py  calibrate_tool.py  checkit_50ul.py  demo_plate_movement.py  demo_plate_slot_walkthrough.py  demo_plate_stacking.py  demo_selfdriving_lab.py  demo_shuffle_pipette_tips.py  demo_ui_tc_generation.py  execute_tcode_file.py  generate_python_from_tc.py  gripper_demo.py  parse_tcode_from_file.py  pick_up_tip.py  teach_point.py  tip_group_bug_reproduction.py
scripts/hooks/: pre-commit
scripts/tracker_scripts/: basic_arm_move.py  joint_space_move.py  plate_position.py
src/tcode_api/: __init__.py  api.py  cli.py  error.py  jog_control.py  script.py  types.py  units.py  utilities.py
src/tcode_api/api/: __init__.py  commands.py  compat.py  core.py  entity.py  format_commands_output.py  labware.py  labware_holder.py  location.py
src/tcode_api/schemas/: base.py  registry.py
src/tcode_api/schemas/commands/: __init__.py  base.py  union.py
src/tcode_api/schemas/commands/add_labware/: __init__.py  latest.py  migrate.py  v1.py  v2.py  v3.py
src/tcode_api/schemas/commands/add_pipette_tip_group/: __init__.py  latest.py  migrate.py  v1.py  v2.py
src/tcode_api/schemas/commands/add_robot/: __init__.py  latest.py  v1.py
src/tcode_api/schemas/commands/add_tool/: __init__.py  latest.py  v1.py
src/tcode_api/schemas/commands/aspirate/: __init__.py  latest.py  v1.py
src/tcode_api/schemas/commands/calibrate_labware_height/: __init__.py  latest.py  v1.py
src/tcode_api/schemas/commands/calibrate_labware_holder/: __init__.py  latest.py  v1.py
src/tcode_api/schemas/commands/calibrate_labware_well_depth/: __init__.py  latest.py  (+1 more)
src/tcode_api/schemas/common/: __init__.py  docs.py  enums.py  value_with_units.py
src/tcode_api/schemas/descriptions/: __init__.py  base.py  union.py
src/tcode_api/schemas/labware_holder/: __init__.py  base.py  union.py
src/tcode_api/schemas/location/: __init__.py  base.py  union.py
src/tcode_api/schemas/pipette_tip_layout/: __init__.py  latest.py  v1.py
src/tcode_api/schemas/script/: __init__.py
src/tcode_api/servicer/: __init__.py  client.py  integrator.py  keyboard_input.py  servicer_api.py
tcode_api/: api.py  script.py
tcode_labware/: biotix_utip_p1000_box.json  biotix_utip_p1000_tip.json  biotix_utip_p100_box.json  biotix_utip_p100_tip.json  biotix_utip_p200_box.json  biotix_utip_p20_box.json  biotix_utip_p20_tip.json  biotix_utip_p250_box.json  biotix_utip_p300_box.json  biotix_utip_p300_tip.json  checkit_50ul.json  costar_3603_plate.json  costar_3603_plate_hella_tall.json  heat_block_insert.json  mtcbiotech_4_channel_trough.json  opentrons_p300_box.json  sergi_1500ul_tube_rack.json  thermo_nunc_266120_plate.json  trilobio_2ml_tube_rack.json
tcode_scripts/: demo_plate_slot_walkthrough.py  execute_tcode_file.py  freedrive.py  parse_tcode_from_file.py
tests/: test_api.py  test_labware_descriptions.py  test_script.py  test_tc_to_py.py  test_utilities.py
tests/data/: example_script.tc
tests/test_api/: __init__.py  test_base.py  test_commands.py  test_common.py  test_compat.py  test_core.py  test_location.py  test_status_mock.py
tests/test_schemas/: __init__.py  test_registry.py  test_serialization.py
tutorials/: connect_to_fleet.html  index.html
(+204 files in other folders)
