[project]
name = "tcode-api"
version = "1.28.0"
description = "Python implementation of Trilobio's TCode API"
authors = [
    { name = "Trilobio", email = "hello@trilo.bio" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.15.0", # Installed to ensure type checking of pydantic
    "pint>=0.25",
    "plac>=1.4.5",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "black>=25.1.0",
    "build>=1.3.0",
    "coverage>=7.8.2",
    "furo>=2025.7.19",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "types-requests>=2.32.4.20250913",
]


[tool.coverage.run]
branch = true
command_line = "-m unittest discover -s tests"
omit = [
  "tests/*",
  "__init__.py",
]
