[project]
name = "tcode-api"
version = "1.37.1"
description = "Python implementation of Trilobio's TCode API"
authors = [{ name = "Trilobio", email = "hello@trilo.bio" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.3",
    "numpy>=2.4.1",
    "pint>=0.25",
    "plac>=1.4.5",
    "pydantic>=2.10.6",
    "python-socketio[client]>=5.13.0",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["tcode_labware/*.json", "src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/", "tcode_labware/"]

[tool.hatch.build.targets.wheel.sources]
"tcode_labware" = "tcode_labware"
"src/tcode_api" = "tcode_api"

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "black>=25.1.0",
    "build>=1.3.0",
    "coverage>=7.8.2",
    "furo>=2025.7.19",
    "ipython>=9.6.0",
    "isort>=6.0.1",
    "mypy>=1.19.0",
    "ruff>=0.14.9",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
# https://adamj.eu/tech/2021/05/25/python-type-hints-specific-type-ignore/
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
# Disallows ScheduleCommandRequest(command_id="", command={}, unexpected_field=123)
init_forbid_extra = true

# Enforce the generated __init__ method to use field types, rather than Any.
# Solves the following problem:
#    ScheduleCommandRequest(command_id="", command=tc.WAIT()) is invalid because the command attribute
#    needs to be a raw dict, not a command object. without this option, mypy doesn't complain.
init_typed = true

# Warn about using `validation_alias` or `alias_generator` in ways that mypy cannot analyze.
# Dunno what this is, but Claude recommended it, so here we are.
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# latest.py files are intentional re-export facades; imports appear "unused" to static analysis
per-file-ignores = {"**/latest.py" = ["F401"], "**/__init__.py" = ["F401"]}

[tool.coverage.run]
branch = true
command_line = "-m unittest discover -s tests"
omit = ["tests/*", "__init__.py"]
